--- a/Book/Toi khong ngung noi loi xin loi em/css/thongtin.css
+++ b/Book/Toi khong ngung noi loi xin loi em/css/thongtin.css
@@ -970,7 +970,7 @@ h4 {
 
     .chapter-text:before {
         display: inline;
-        content: "C";
+        content: "Chương:";
     }
 
     .l-chapter .l-chapters,
