--- a/css(only)/css-index.css
+++ b/css(only)/css-index.css
@@ -289,6 +289,7 @@ footer p {
         font-size: 18px;
         font-family: Arial, sans-serif;
         box-sizing: border-box;
+        z-index: 9999;
     }
 
 
@@ -388,6 +389,7 @@ footer p {
         position: fixed;
         bottom: 60px;
         right: 40px;
+        z-index: 9999;
     }
 
     /* Ẩn chatbox mặc định */
